# percona-parser

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  INNODB_DECOMPRESSION_LIBRARY.md  README.md  decompress.cc  decompress.h  decrypt.cc  decrypted_test.ibd  demo_encryption.sh  encrypted_test.ibd  generate_llm_prompt.sh  ib_parser.cc  log.txt  my_keyring_lookup.cc  parser.cc  parser.h  tables_dict.cc  tables_dict.h  test_api.c  undrop_for_innodb.cc  undrop_for_innodb.h
.claude/: settings.local.json
docs/: Api_reference.md  Architecture.md  Building.md  Compilation_Guide.md  Examples.md  InnoDB_Compressed_pages.md  InnoDB_Encryption.md  Library_usage.md  Parsing-innodb-tablespaces.md  Project_Files.txt  Testing.md
examples/c/: example  example.c
examples/go/: example.go  go.mod  ibd-reader-example  ibd_reader.go  run_example.sh
examples/go/ibd/: ibd_reader.go
lib/: ibd_reader_api.cc  ibd_reader_api.h
scripts/: validate_parse.sh
tests/: ENCRYPTION_TESTING_GUIDE.md  README.md  charset_test_sdi.json  compressed_test_sdi.json  decrypted_test.ibd  demo_encryption.sh  encrypted_test.ibd  ibd_text_inspector.sh  json_test_sdi.json  keyring_test  lob_test_sdi.json  pure_compressed.ibd  pure_compressed_decompressed.ibd  pure_compressed_fixed.ibd  run_all_tests.sh  run_tests.sh  secondary_index.ibd  secondary_index_sdi.json  test_cfg_import.sh  test_charset_decode.sh  test_compressed.sh  test_compressed_compressed.ibd  test_compressed_decompressed.ibd  test_encrypted.sh  test_encrypted_compressed.sh  test_import_only.sh  test_index_id_remap.sh  test_json_decode.sh  test_lob_decode.sh  test_sdi_external.sh  test_sdi_rebuild.sh  test_secondary_index.sh  test_types_decode.sh  test_validate_remap.sh  test_with_data.ibd  test_with_data_decompressed.ibd  test_zlob_decode.sh  types_test.ibd  types_test_sdi.json  zlob_test_sdi.json
